syntax = "proto3";
package carts;
option go_package = "./carts";


service Cart {
  rpc CartItemList(UserInfo) returns(CartItemListResponse);   //获取用户的购物车信息
  rpc CreateCartItem(CartItemRequest) returns(CreateCartResponse); //商品+1
  rpc SubCartItem(CartItemRequest) returns(SubCartResponse); //商品-1
  rpc DeleteCartItem(CartItemRequest) returns(EmptyCartResponse); //删除购物车条目
}

message UserInfo {
    int32 id = 1;
}

message CartItemListResponse {
    int32 status_code = 1;
    string status_msg = 2;
    int32 total = 3;
    repeated CartInfoResponse data = 4;
}

message CartInfoResponse {
    int32 id = 1;
    int32 user_id = 2;
    int32 product_id = 3;
    int32 quantity = 4;
    bool checked = 8;
}

message CreateCartResponse {
    int32 status_code = 1;
    string status_msg = 2;
    int32 id = 3;
}
message SubCartResponse {
    int32 status_code = 1;
    string status_msg = 2;
    int32 id = 3;
}

message CartItemRequest {
    int32 id = 1;
    int32 user_id = 2;
    int32 product_id = 3;
    string product_name = 4;
    string product_image = 5;
    float productPrice = 6;
    int32 quantity = 7;
    bool checked = 8;
}
message EmptyCartResponse {
    int32 status_code = 1;
    string status_msg = 2;
}